# wavetablesynth01

./: CMakeLists.txt  README.md
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/include/CraneFlyFirstPlugin/: PluginProcessor.h  WavetableOscillator.h  WavetableSynth.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp  WavetableOscillator.cpp  WavetableSynth.cpp
tests/: CMakeLists.txt
tests/source/: AudioProcessorTest.cpp
